# Turtlebot3_complete_coverage

./: CMakeLists.txt  map.pgm  map.yaml  package.xml  setup.py
launch/: follow_the_route.launch  gazebo_turtlebot3_world.launch  turtlebot3_navigation.launch
nodes/: follow_the_route  route.yaml
src/dev/: generate_targets.py  generate_targets_dfs.py  go_to_specific_point_on_map.py  go_to_specific_point_on_map_copy.py  mapToGazeboShift.txt  measure_coverage.py  new_route.yaml  readPGM.py  test.py
